eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 396605755172.dkr.ecr.ap-northeast-1.amazonaws.com/simplebank:d53b2c10d7f12cb37713edc687c77f0fbafbae0e
        ports:
        - containerPort: 8089
